--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,63 @@
-body {
-  background-color: bisque;
+main {
+  display: flex;
+  justify-content: center;
+  margin-top: 12%;
+}
+
+.header {
+  display: grid;
+  grid-auto-flow: column;
+  grid-column-gap: 58%;
+  padding: 15px;
+}
+
+.fa {
+  margin: 25px;
+}
+
+.main {
+  width: 50%;
+  background-color: white;
+  filter: drop-shadow(1px 1px 4px grey);
+}
+
+.input {
+  margin: 0;
+  border: none;
+  border-radius: 0;
+  width: 75%;
+  padding: 15px;
+  font-size: 16px;
+}
+
+.clear-btn {
+  margin: 0;
+  border: none;
+  border-radius: 0;
+  width: 100%;
+  padding: 15px;
+  font-size: 16px;
+}
+
+.addBtn {
+  padding: 10px;
+  width: 20%;
+  color: #d9d9d9;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+ul {
+  list-style: none;
+}
+
+.task {
+  display: list-item;
+  margin: 10px;
+}
+
+.listItems {
+  padding-left: 9px;
+  display: inline-flex;
+  flex-direction: column;
 }
