--- a/src/style.css
+++ b/src/style.css
@@ -1,63 +1,100 @@
-main {
-  display: flex;
-  justify-content: center;
-  margin-top: 12%;
+body {
+  background-color: lightgray;
 }
 
-.header {
-  display: grid;
-  grid-auto-flow: column;
-  grid-column-gap: 58%;
-  padding: 15px;
+section {
+  margin: 30px;
+  background-color: #fff;
+  box-shadow: 2px 2px 2px 2px grey;
 }
 
-.fa {
-  margin: 25px;
-}
-
-.main {
-  width: 50%;
-  background-color: white;
-  filter: drop-shadow(1px 1px 4px grey);
-}
-
-.input {
-  margin: 0;
-  border: none;
-  border-radius: 0;
-  width: 75%;
-  padding: 15px;
-  font-size: 16px;
-}
-
-.clear-btn {
-  margin: 0;
-  border: none;
-  border-radius: 0;
+#list-title {
+  border-bottom: 1px solid lightgray;
   width: 100%;
-  padding: 15px;
-  font-size: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.addBtn {
-  padding: 10px;
-  width: 20%;
-  color: #d9d9d9;
+#list-title h1 {
+  padding-left: 18px;
+}
+
+button {
+  border: none;
+  background-color: white;
+}
+
+#list-title button {
+  margin-right: 18px;
+  padding: 0;
+}
+
+input {
+  border: none;
+}
+
+#input-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 18px;
+  border-bottom: 1px solid lightgray;
+}
+
+.each-row {
+  padding: 12px 18px;
+  border-bottom: 1px solid lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.task-item,
+.add-list {
+  width: 90%;
+}
+
+.row-info {
+  width: 90%;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+}
+
+.row-btn {
   cursor: pointer;
-  transition: 0.3s;
 }
 
-ul {
-  list-style: none;
+.clear-all {
+  background-color: lightgray;
+  width: 100%;
 }
 
-.task {
-  display: list-item;
-  margin: 10px;
+#clear {
+  color: black;
+  text-decoration: none;
+  padding: 18px;
+  text-align: center;
+  margin: auto auto;
+  display: block;
 }
 
-.listItems {
-  padding-left: 9px;
-  display: inline-flex;
-  flex-direction: column;
+.arrow {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+#do-input {
+  color: #000;
+}
+
+.list {
+  height: max-content;
+  width: 100%;
+}
+
+#message {
+  text-align: center;
 }
